X   X
    * Add Axe + Respiration = generate tree
    * Add Hoe + Fire Protection = sensor
    * Add Leggings + Punch = rocket launch pants (double-tap shift)
    * Change Boots + Punch = hover jump, now activated by double-tapping shift
    * Improve Shovel + Power = excavate, now can excavate sand

2012-02-18  0.5.7
    * Add Bow + Respiration = stapled arrows (attach adjacent item in inventory)
    * Add Bow + Silk Touch = magnetic arrows (transport nearby entity)
    * Add Sword + Fire Protection = return to player when dropped in lava
    * Add Pickaxe + Looting = deconstruct (reverse crafting)
    * Add Hoe + Power = move time
    * Add Hoe + Bane of Arthropods = toggle downfall
    * Add Shears + Power = hedge/trimmer builder effect, right-click leaves to build
    * Improve Pickaxe/Shovel/Axe + Flame = auto-smelt, now drops natural item if unsmeltable
    * Improve Axe + Power = fell tree, now breaks more branches depending on enchantment level
    * Improve Boots + Punch = hover jump, now only jumps when press Shift, not release
    * Improve Boots + Punch = hover jump, now preserves horizontal momentum
    * Improve Chestplate + Infinity = god mode, now maxes out food level and health
    * Improve Shears + Looting, now can also collect leather from cows
    * Change Shears + Power = hedge trimmer, now cuts in fixed shape instead of all contiguous
    * Fix not ignoring cancelled events (partial fix for ticket 4)
    * Fix new item/enchantments not respecting Unbreaking and not breaking when used up
    * Fix NPE and player disconnect with certain enchantments when using ModLoaderMP (ticket 6)
    * Fix Axe + Power = fell tree crashing in some situations (ticket 3)
    * Fix Shears + Power = hedge trimmer crashing in some situations (ticket 2)

2012-02-15  0.5.1a
    * Fix durability destruction bug affecting all pickaxes (ticket 7)
    * Compile against CraftBukkit 1.1-R4

2012-02-13  0.5.1
    * Add Boots + Power = witch's broom (sprint flying)